fixed arrow alignment in checkout-item component, fixed e fixed error in legacy-stripe-checkout component

--- a/client/src/components/checkout-item/checkout-item.styles.scss
+++ b/client/src/components/checkout-item/checkout-item.styles.scss
@@ -42,6 +42,7 @@
 
         .value {
             margin: 0 10px;
+            width: auto;
         }
     }
 
@@ -72,7 +73,7 @@
             }
 
             &:hover {
-                transform: scale(1.15);
+                transform: scale(1.15) rotate(90deg);
                 color: rgb(219, 33, 33);
                 background-color: #eee;
 
